--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "adasha-utils",
-  "version": "1.0.0",
+  "version": "0.1.0a",
   "description": "",
   "main": "index.js",
   "scripts": {
